--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     // 解绑银行卡
     var unbind_bank_card = $('#J_unbind_bank_card_template').html();
-    // $('.example-1').on('click', function(e){
+    $('.example-1').on('click', function(e){
         $.idialog({
             title: '解绑银行卡',
             content: unbind_bank_card,
@@ -322,7 +322,7 @@
                 });
             }
         });
-    // });
+    });
 
     // 提现
     $('.example-2').on('click', function(e){
