--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
     // 提现
     $('.example-2').on('click', function(e){
-        $.idialog('提现', '<div style="color: #999; padding: 0 20px 20px 20px;">提现单笔金额大于等于50万，提现时间工作日17:00到00:00不受理，您可以分拆提现金额或提现时间。</div>');
+        $.idialog('提现', '<div style="color: #999; padding: 20px 20px 30px 20px;">提现单笔金额大于等于50万，提现时间工作日17:00到00:00不受理，您可以分拆提现金额或提现时间。</div>');
     });
 
     // 您还未绑定银行卡
