--- a/README.html
+++ b/README.html
@@ -7,13 +7,33 @@
         <h1 id="iconfirm">iconfirm</h1>
 <h6 id="jquery-">jquery弹层插件</h6>
 <ul>
-<li>close icon hover旋转圆心问题</li>
-<li>背景点击关闭配置的问题</li>
-<li>获取验证码 和 提交input输入问题</li>
-<li>按钮loading问题</li>
-<li>弹层拖动问题</li>
-<li>弹层出发点动画问题</li>
+<li>[x] close icon hover旋转圆心问题 </li>
+<li>[x] 背景点击关闭配置的问题</li>
+<li>[x] 背景点击关闭震动效果</li>
+<li>[ ] 按钮loading问题</li>
+<li>[ ] 获取验证码 和 提交input输入问题</li>
+<li>[ ] 弹层拖动问题</li>
+<li>[ ] 弹层出发点动画问题</li>
+<li>[ ] 弹层背景fixed定位导致滚动条无法鼠标拖曳的问题</li>
 </ul>
+<table>
+<thead>
+<tr>
+<th>head</th>
+<th>head</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Content Cell</td>
+<td>Content Cell</td>
+</tr>
+<tr>
+<td>Content Cell</td>
+<td>Content Cell</td>
+</tr>
+</tbody>
+</table>
 
       </body>
     </html>
