--- a/README.html
+++ b/README.html
@@ -10,8 +10,8 @@
 <li>[x] close icon hover旋转圆心问题 </li>
 <li>[x] 背景点击关闭配置的问题</li>
 <li>[x] 背景点击关闭震动效果</li>
-<li>[ ] 按钮loading问题</li>
-<li>[ ] 获取验证码 和 提交input输入问题</li>
+<li>[x] 按钮loading问题</li>
+<li>[x] 获取验证码 和 提交input输入问题</li>
 <li>[ ] 弹层拖动问题</li>
 <li>[ ] 弹层出发点动画问题</li>
 <li>[ ] 弹层背景fixed定位导致滚动条无法鼠标拖曳的问题</li>
