--- a/index.html
+++ b/index.html
@@ -480,14 +480,14 @@
 
     // 提现说明
     var withdraw_template = $('#J_withdraw_template').html();
-    // $('.example-6').on('click', function(e){
+    $('.example-6').on('click', function(e){
         $.idialog({
             width: 800,
             title: '提现说明',
             content: withdraw_template,
             backgroundDismiss: true
         });
-    // });
+    });
 
 </script>
 </body>
