fix bg scrollbar can not scroll bug

--- a/README.html
+++ b/README.html
@@ -14,7 +14,7 @@
 <li>[x] 获取验证码 和 提交input输入问题</li>
 <li>[x] 弹层拖动问题</li>
 <li>[ ] 弹层出发点动画问题</li>
-<li>[ ] 弹层背景fixed定位导致滚动条无法鼠标拖曳的问题</li>
+<li>[x] 弹层背景fixed定位导致滚动条无法鼠标拖曳的问题</li>
 </ul>
 <table>
 <thead>
