--- a/index.html
+++ b/index.html
@@ -390,7 +390,6 @@
                     var submitPromise = $.Deferred();
                     $.when(submitPromise).then(function(data){
                         if(data.type === 'success'){
-                            lg(data);
                             // that.close();
                             $.ialert('恭喜你，解绑成功');
                         }else{
@@ -444,7 +443,7 @@
     // 激活存管账户
     $('.example-4').on('click', function(e){
         $.ialert({
-            slogan: '<img src="./images/logo.png" alt="">',
+            slogan: '<img src="./images/logo.png" alt="激活存管账户">',
             title: '激活存管账户',
             content: '<div style="color: #999; padding: 0 20px 20px 20px;">i财富携手上饶银行的资金存管系统已上线，为了保障您的资金安全，请开通上饶银行资金存管账户。</div>',
             buttons: {
@@ -486,6 +485,53 @@
             backgroundDismiss: true
         });
     });
+
+    // $.ialert('激活提醒', '请尽快激活');
+    // $.ialert();
+    // $.idialog();
+
+    // $.iconfirm();
+    // $.iconfirm('title', 'content');
+    // $.iconfirm({
+    //     title: 'title',
+    //     content: 'content',
+    //     buttons: {
+    //         ok: {
+    //             text: 'btn name',
+    //             action: () => {
+
+    //             }
+    //         },
+    //         cancel: {
+    //             text: 'btn name',
+    //             action: () => {
+
+    //             }
+    //         }
+    //     }
+    // });
+
+    // $.ialert();
+    // $.ialert('title');
+    // $.ialert();
+
+    // $.idialog();
+    // $.idialog('title');
+    // $.idialog('title', 'content');
+    // $.idialog({
+    //     title: 'title'
+    // });
+    // $.idialog({
+    //     title: 'title',
+    //     content: 'content'
+    // });
+
+    // {}
+    // {title: "title", content: false}
+    // {title: "title", content: "content"}
+    // {title: "title"}
+    // {title: "title", content: "content"}
+
 
 </script>
 </body>
