add animation detect

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: rgba(0, 0, 0, 0.67);
+            background: #000;
+            opacity: .4;
+            filter: alpha(opacity=40);  
         }
         .iconfirm__bg--hidden{
             opacity: 0;
@@ -145,7 +147,6 @@
         }
 
     </style>
-
     <title></title>
 </head>
 <body>
