解决弹层弹出时由于滚动条产生的抖动

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="height: 2000px;">
 
 
-    <div style="padding-top: 30%;">
+    <div style="padding-top: 300px;">
 
     <button class="example-1">解绑银行卡 1</button>
     <button class="example-2">提现 2</button>
